test/sema/interface-impl-decl-error-class.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

// CHECK: [[@LINE+1]]:7: error: 'String' is not an interface
class Z<T>: String {
    init() {}
}

func main() {
    let z = Z<int>();
}
